--- a/PAW.Tarea2/PAW.Tarea2/Views/Home/Index.cshtml
+++ b/PAW.Tarea2/PAW.Tarea2/Views/Home/Index.cshtml
@@ -3,29 +3,45 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Tarea 2 WCF</h1>
+    <p class="lead">WCF, ASP.net</p>
+    
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div class="container">
+    <div class="img-responsive">
+        <img src=".Images/ECUACION.gif" />
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="form-horizontal">
+        <form action="/" method="post">
+            <div class="row col-md-6 form-inline ">
+                <div class=" ">
+                    <label>A: </label>
+                    <input class="form-control" type="number" name="a" value="" />
+                </div>
+
+                <div class="">
+                    <label>B: </label>
+                    <input class="form-control" type="number" name="b" value="" />
+                </div>
+
+                <div class="">
+                    <label>C: </label>
+                    <input class="form-control" type="number" name="c" value="" />
+                </div>
+                <br />
+                <div class="">
+                    <label>X1: </label>
+                    <input class="form-control" type="number" name="x1" readonly value="" />
+                </div>
+                <div class="">
+                    <label>X2: </label>
+                    <input class="form-control" type="number" name="x2" readonly value="" />
+                </div>
+                <div class="btn">
+                    <input class=" btn btn-success" type="button" name="btn_Calcular" value="Calcular"  />
+                </div>
+            </div>
+        </form>
     </div>
 </div>
